# ml-project

./: .gitignore  README.md  kedro_mlflow_upload.py  pyproject.toml
src/ml_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/ml_project/pipelines/data_processing/: nodes.py  pipeline.py
